{{$NEXT}}

    [ DOCUMENTATION ]
    * GH #1383: Remove full URL on links to third party modules (Alberto Simoes)

    [ BUG FIXES ]
    * GH #1373: Unset Dancer environment vars before testing (Alberto Simões)
    * GH #1383: Remove Deflater from default app skeleton (Pierre Vigier)
    * GH #1366: Use proper shebang on dancer script and make EU::MM do the job

0.205001  2017-07-11 08:03:21-05:00 America/Chicago

    [ BUG FIXES ]
    * GH #1332: Add check for old version of HTTP::XSCookies (Peter Mottram -
      SysPete)
    * GH #1336: Fix warnings on 5.10 and below. (Sawyer X)
    * GH #1347: Add Perl versions 5.22-5.26 and appveyor to Travis-CI
      configuration (Dave Jacoby)

    [ ENHANCEMENTS ]
    * GH #1281: Use Ref::Util in Core for all reference checks (Mickey 
      Nasriachi)
    * GH #1338: Add message explaining how to run newly-created application
      (Jonathan Cast)

    [ DOCUMENTATION ]
    * GH #1334: Fix prefix example in Cookbook (Abdullah Diab)
    * GH #1335: Add missing word in request->host docs (Glenn Fowler)
    * GH #1337: Fix link in SEE ALSO section of Dancer2::Core::Types (Stefan
      Hornburg - Racke)
    * GH #1341: Clarify plugin documentation (Stefan Hornburg - Racke)
    * GH #1345, #1351, #1356: Fix password check code example in tutorial
      (Jonathan Cast)
    * GH #1355: Fix typo (Gregor Herrmann)

0.205000  2017-03-10 15:37:52-06:00 America/Chicago

    [ BUG FIXES ]
    * GH #1325: Support multi-value cookies when using HTTP::XSCookies.
      (James Raspass)
    * GH #1303: Read configuration options when send_as() creates a new 
      serializer (Paul Williams)
    * GH #1290: Properly check buffer length in _read_to_end() (Marketa 
      Wachtlova)
    * GH #1322: Deprecate broken request->dispatch_path in favor of 
      request->path. Warn the developer of the deprecation (Russell 
      @veryrusty Jenkins).

    [ ENHANCEMENTS ]
    * GH #1326: Speed up by using Type::Tiny, again. (Pete SysPete Mottram)