@@ -1,9 +1,11 @@
 {{$NEXT}}
 
     [ DOCUMENTATION ]
-    * GH #1383: Remove full URL on links to third party modules (Alberto Simoes)
+    * GH #1383: Remove full URL on links to third party modules (Alberto Simões)
 
     [ BUG FIXES ]
+    * GH #1304: Fix the order by which config files are loaded, independently
+      of their filename extension (Alberto Simões)
     * GH #1373: Unset Dancer environment vars before testing (Alberto Simões)
     * GH #1383: Remove Deflater from default app skeleton (Pierre Vigier)
     * GH #1366: Use proper shebang on dancer script and make EU::MM do the job
